--- a/face/styles.css
+++ b/face/styles.css
@@ -9,9 +9,12 @@ html, body {
  */
 
  .navbar-brand {
-  padding-top: .75rem;
-  padding-bottom: .75rem;
-  font-size: 1rem;
+  padding-left: 25px;
+  padding-top: 0.65rem;
+  padding-bottom: 0.75rem;
+  min-width: 250px;
+  max-width: 250px;
+  font-size: 1.5rem;
   background-color: rgba(0, 0, 0, .25);
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .25);
 }
@@ -39,6 +42,64 @@ html, body {
 
 .border-top { border-top: 1px solid #e5e5e5; }
 .border-bottom { border-bottom: 1px solid #e5e5e5; }
+
+/*
+ * Main
+ */
+#audio-frame { display: block; width:100%; height:100%; min-height: 90vh;}
+
+#content {
+  min-height: 100vh;
+  width:100%; 
+  height:100%;
+}
+
+#view {
+  min-height: 100vh;
+  padding-top: 60px;
+  width:100%; 
+  height:100%;
+}
+
+.wrapper {
+  display: flex;
+  align-items: stretch;
+  /* min-height: 100%; */
+}
+
+#sidebar {
+  min-height: 100vh;
+  min-width: 250px;
+  max-width: 250px;
+  padding-left: 20px;
+  padding-top: 80px;
+  font-size: 1.2rem;
+  color: #fff;
+}
+
+#sidebar li {
+  margin-top: 20px;
+}
+
+#sidebar .nav-link {
+  margin-left: 5px;
+  display: inline;
+}
+
+#sidebar.active {
+  margin-left: -250px;
+}
+
+/* 
+ * Conf
+ */
+
+pre {outline: 0px solid #ccc; padding: 5px; margin: 20px; font-size: 1rem}
+.string { color: darkgreen; font-weight: bold }
+.number { color: darkblue; font-weight: bold }
+.boolean { color: darkorange; font-weight: bold }
+.null { color: darkorange; font-weight: bold }
+.key { color: black; }
 
 /*
  * Login
